# api

./: README.md
gemini-aistudio/: .dockerignore  .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  README.md  baseline_pyright.txt  excluded_models.txt  launch_camoufox.py  monkeytype_config.py  pyproject.toml  pyrightconfig.json  server.py  supervisord.conf
gemini-aistudio/api_utils/: __init__.py  app.py  auth_manager.py  auth_utils.py  client_connection.py  common_utils.py  context_init.py  context_types.py  dependencies.py  error_utils.py  mcp_adapter.py  model_switching.py  page_response.py  queue_worker.py  request_processor.py  response_generators.py  response_payloads.py  server_state.py  sse.py  tools_registry.py  utils.py
gemini-aistudio/browser_utils/: __init__.py  debug_utils.py  model_management.py  more_models.js  operations.py  page_controller.py  thinking_normalizer.py
gemini-aistudio/config/: __init__.py  constants.py  model_capabilities.json  selector_utils.py  selectors.py  settings.py  timeouts.py
gemini-aistudio/deprecated/: gui_launcher.py
gemini-aistudio/deprecated_javascript_version/: README.md  auto_connect_aistudio.cjs  package.json  server.cjs  test.js
gemini-aistudio/docker/: .env.docker  Dockerfile  README-Docker.md  README.md  SCRIPT_INJECTION_DOCKER.md  docker-compose.yml  update.sh
gemini-aistudio/docs/: advanced-configuration.md  api-usage.md  architecture-guide.md  authentication-setup.md  client-examples.md  daily-usage.md  dependency-versions.md  development-guide.md  env-variables-reference.md  environment-configuration.md  installation-guide.md  logging-control.md  openai-compatibility.md  platform-differences.md  quick-start-guide.md  script_injection_guide.md  script_injection_v2_upgrade.md  streaming-modes.md  troubleshooting.md  ui_state_management.md  webui-guide.md
gemini-aistudio/launcher/: __init__.py  checks.py  config.py  frontend_build.py  internal.py  logging_setup.py  process.py  runner.py  utils.py
gemini-aistudio/logging_utils/: __init__.py  grid_logger.py  setup.py
gemini-aistudio/models/: __init__.py  chat.py  exceptions.py  logging.py
gemini-aistudio/scripts/: fetch_camoufox_data.py  install.ps1  install.sh  llm_mock.py  update_browserforge_data.py
gemini-aistudio/stream/: __init__.py  cert_manager.py  interceptors.py  main.py  proxy_server.py  (+1 more)
(+231 files in other folders)
